OAKHILL/src/objects/Fund_Family__c.object
<CustomObject>
    <fields>
        <fullName>Administrator__c</fullName>
        <label>Administrator</label>
        <picklist>
            <picklistValues>
                <fullName>Citi Hedge Fund Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OHA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wells Fargo Investor Services</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Liquidity__c</fullName>
        <label>Liquidity</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Opportunity_MN_Name__c</fullName>
        <formula>HYPERLINK(&apos;/006/e?RecordType=012i0000001AGu3&amp;CF00Ni000000DjVBy=&apos;+  Name  + &apos;&amp;opp3=&apos; + Name + &apos; : &apos; +  TEXT(TODAY())+ &apos;&amp;opp11=Prospecting&amp;opp9=&apos; + TEXT(Month(TODAY())) + &apos;%2f&apos; + TEXT(DAY(today())) + &apos;%2f&apos; + TEXT(YEAR(TODAY() + 1)) , &quot;New Opportunity&quot; , &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp; Id , &quot;View&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
    <label>Fund Family</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Fund Family Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fund Families</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>